--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "cssnano": "^4.1.10",
+    "file-loader": "^4.2.0",
+    "image-webpack-loader": "^5.0.0",
+    "imagemin-webp-webpack-plugin": "^3.2.1",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
     "webpack-md5-hash": "^0.0.6",
