--- a/package.json
+++ b/package.json
@@ -16,12 +16,11 @@
     "imagemin-webp-webpack-plugin": "^3.2.1",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
-    "webpack-md5-hash": "^0.0.6",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-md5-hash": "^0.0.6"
   },
   "scripts": {
     "build": "webpack --mode production",
-    "dev": "webpack --mode development"
+    "dev": "webpack-dev-server --mode development --progress"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
@@ -34,6 +33,7 @@
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.2.0",
-    "style-loader": "^1.0.0"
+    "style-loader": "^1.0.0",
+    "webpack-dev-server": "^3.8.0"
   }
 }
