--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "file-loader": "^4.2.0",
     "image-webpack-loader": "^5.0.0",
     "imagemin-webp-webpack-plugin": "^3.2.1",
+    "jshint": "^2.10.2",
     "remove-files-webpack-plugin": "^1.1.3",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
